Add todo's feature: pages & logic

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,6 @@
 {
   "dashboardTabLabel": "Dashboard",
+  "tasksTabLabel": "Tasks",
   "organizationSettingsTabLabel": "Organization",
   "settingsTabLabel": "Settings",
   "profileSettingsTabLabel": "Profile",
