Rename dashboard to projects in menu

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,6 @@
 {
   "dashboardTabLabel": "Dashboard",
+  "projectsTabLabel": "Projects",
   "organizationSettingsTabLabel": "Organization",
   "settingsTabLabel": "Settings",
   "profileSettingsTabLabel": "Profile",
